# dab

./: .cirrus.star  .cirrus.yml  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.adoc  README.adoc  cliff.toml  init.pl  vcpkg-configuration.json  vcpkg.json
.github/workflows/: changelog.yml
ci/: gather-coverage.bat  gather-coverage.sh  gather_logs.sh  make_release.bat  make_release.sh  package_env.bat  sha256.bat  sha256.ps1  symlinks.sh  upload-artefact.bat  upload-artefact.sh  version_env.bat  vs.bat
cmake/: add_covered_test.cmake  add_htmldoc.cmake  add_manpage.cmake  cpack_config.cmake  generate_lto.cmake  generate_warnings.cmake  make_header_libs.cmake
cmake/toolchains/: arm64-linux-clang.cmake  arm64-linux-gcc.cmake  x64-linux-clang.cmake  x64-linux-gcc.cmake  x64-windows-clang.cmake  x64-windows-msvc.cmake
hooks/: README.adoc  install.pl
hooks/commit-msg/: semantic-commits.pl
src/core/: CMakeLists.txt
src/core/public/dab/: db_command.hxx  db_connection.hxx  db_connection_string_builder.hxx  db_factory.hxx  db_result_row.hxx  db_transaction.hxx  isolation_level.hxx
src/core/public/dab/coro/: await.hxx
src/core/public/dab/fwd/: db_command.hxx  db_connection.hxx  db_connection_string_builder.hxx  db_transaction.hxx
src/core/public/dab/typing/: db_value.hxx  type_id.hpp
src/core/src/: db_command.cxx  db_connection.cxx  db_connection_string_builder.cxx  db_factory.cxx  db_result_row.cxx  db_transaction.cxx
src/core/src/typing/: db_value.cxx  type_id.cpp
src/core/test/: CMakeLists.txt  db_connection_string_builder_helper.test.cxx
src/sqlite/: CMakeLists.txt
src/sqlite/include/dab/sqlite/: connection_string.hxx
src/sqlite/public/dab/sqlite/: sqlite_command.hxx  sqlite_connection.hxx  sqlite_connection_string_builder.hxx  sqlite_factory.hxx  sqlite_result_row.hxx  sqlite_transaction.hxx
src/sqlite/public/dab/sqlite/typing/: sqlite_values.hxx
src/sqlite/src/: sqlite_command.cxx  sqlite_connection.cxx  sqlite_connection_string_builder.cxx  sqlite_factory.cxx  sqlite_result_row.cxx  sqlite_transaction.cxx
src/sqlite/src/private/: connection_string.cxx
src/sqlite/src/typing/: sqlite_values.cxx
src/sqlite/test/: CMakeLists.txt  connection.test.cxx  connection_string_builder.test.cxx  database_creation.test.cxx  ddl.test.cxx  dql.test.cxx  main.cxx  test.db
